--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -24,36 +20,23 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "@/app/*": [
-        "./src/app/*"
-      ],
-      "@/components/*": [
-        "./src/presentation/components/*"
-      ],
-      "@/domain/*": [
-        "./src/domain/*"
-      ],
-      "@/data/*": [
-        "./src/data/*"
-      ],
-      "@/infra/*": [
-        "./src/infra/*"
-      ],
-      "@/main/*": [
-        "./src/main/*"
-      ]
-    }
+      "@/*": ["./src/*"],
+      "@/app/*": ["./src/app/*"],
+      "@/components/*": ["./src/presentation/components/*"],
+      "@/domain/*": ["./src/domain/*"],
+      "@/data/*": ["./src/data/*"],
+      "@/infra/*": ["./src/infra/*"],
+      "@/main/*": ["./src/main/*"]
+    },
+    "types": ["jest", "@testing-library/jest-dom"]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "jest.setup.js",
+    "jest.d.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
