--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,6 @@
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -28,7 +27,8 @@
       "@/infra/*": ["./src/infra/*"],
       "@/main/*": ["./src/main/*"]
     },
-    "types": ["jest", "@testing-library/jest-dom"]
+    "types": ["jest", "@testing-library/jest-dom"],
+    "skipLibCheck": true
   },
   "include": [
     "next-env.d.ts",
@@ -38,5 +38,5 @@
     "jest.setup.js",
     "jest.d.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "cypress", "cypress.config.ts", "tests/e2e"]
 }
