refactor: add GetStorage and SetStorage and decorator

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "husky": "^9.1.7",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
+    "jest-localstorage-mock": "^2.4.26",
     "lint-staged": "^16.1.2",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
