--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
       {
@@ -36,7 +36,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "jest.setup.js",
-    "jest.d.ts"
+    "jest.d.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": ["node_modules", "cypress", "cypress.config.ts", "tests/e2e"]
 }
